compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__clause_guards21.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 177
expression: "\npub fn main(x) {\n  case x {\n    _ if x == [1, 2, 3] -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    _ if x == [1, 2, 3] -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(list(integer())) -> integer().
main(X) ->
    case X of
        _ when X =:= [1, 2, 3] ->
            1;

        _ ->
            0
    end.
